<resources>
    <string name="app_name">GdzieMelanż</string>
    <string name="login">Zaloguj</string>
    <string name="email">Email</string>
    <string name="pass">Hasło</string>
    <string name="reg">ZAREJESTRUJ</string>
    <string name="logo">Piwo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow"> <b>Slideshow</b></string>
</resources>